src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
 */
@import "compass/css3/box-shadow";
@import "compass/css3/border-radius";
@import "compass/css3/images";
@import 'compass/css3/transform';

%gcwu-default-mobile-no-rounded-corners {
	@include border-radius(0);
}

%gcwu-default-mobile-all-rounded-corners {
	@include border-radius(0.6em);
}

%gcwu-default-mobile-no-bottom-rounded-corners {
	@include border-bottom-left-radius(0);
	@include border-bottom-right-radius(0);
}

%gcwu-default-mobile-no-top-rounded-corners {
	@include border-top-left-radius(0);
	@include border-top-right-radius(0);
}

%gcwu-default-mobile-bottom-rounded-corners {
	@include border-bottom-left-radius(0.6em);
	@include border-bottom-right-radius(0.6em);
}

%gcwu-default-mobile-top-rounded-corners {
	@include border-top-left-radius(0.6em);
	@include border-top-right-radius(0.6em);
}

body {
	@if $experimental-support-for-webkit {
		-webkit-text-size-adjust: none;
	}
	font-family: Verdana, Arial, Helvetica, sans-serif;
	font-size: 80%;
	color: #333;
}

a {
	color: #295376;
	font-weight: bold;
	&:active {
		text-decoration: underline !important;
	}
}

blockquote {
	@extend %no-margin-no-shadow;
}

%no-margin-no-shadow {
	margin-left: 0;
	margin-right: 0;
	text-shadow: none;
}

form {
	@extend %no-margin-no-shadow;
}

#{headings(2,6)} {
	@extend %no-margin-no-shadow;
}

img {
	@extend %no-margin-no-shadow;
	max-width: 100%;
	height: auto;
	@extend %gcwu-default-mobile-display-block;
}

li {
	&#gcwu-gcft-ca { //TODO: Is this ID ever outside an li?
		a {
			padding-left: 0;
			padding-right: 0;
			font-size: 0.7em;
			border: none;
		}
	}
}

p {
	@extend %no-margin-no-shadow;
}

pre {
	@extend %no-margin-no-shadow;
}

table {
	@extend %no-margin-no-shadow;
}

[id|="wb-body-sec"] {
	#wb-skip2 {
		@extend %gcwu-default-mobile-display-none;
		visibility: hidden;
	}
}

#wb-head {
	@extend %period-after-pseudo;
}

[id|="wb-body"] {
	background: #fff !important;
}

#gcwu-title {
	border: 1px solid #456F9A;
	p {
		padding: 3px;
		margin: 0;
	}
	a {
		font-size: 1.5em;
		color: #fff !important;
		text-shadow: 0 1px 1px #044062;
		text-decoration: none;
	}
}

#gcwu-wmms {
	@extend %position-absolute;
	top: 0;
	left: 0;
	img {
		padding: 5px 3px;
		margin: 0;
		background: #fff;
	}
}

#gcwu-date-mod {
	@extend %period-after-pseudo;
	float: right;
	margin: 5px 0;
}

#gcwu-priorities {
	li {
		text-align: center;
	}
	ul {
		@extend %period-after-pseudo;
	}
}

[class*="span-"]{
	position: relative;
}

#wb-main-in {
	padding: 3px;
	h1 {
		font-size: 1.5em;
		font-weight: 400;
		margin: -3px;
		padding: 0 3px;
		border: 1px solid #999;
		border-width: 1px 0 0 0;
		text-shadow: none;
		position: static !important;
		&.wb-invisible {
			position: absolute !important;
		}
	}
	.span-1, .span-2, .span-3, .span-4, .span-5, .span-6, .span-7, .span-8, .span-9, .span-10, .span-11, .span-12 {
		margin-bottom: 20px;
	}
}

.clear {
	clear: both;
	@extend %gcwu-default-mobile-display-block;
	height: 0;
	overflow: hidden;
	visibility: hidden;
	width: 0;
	margin: 0;
}

.ui-mobile {
	#gcwu-srch {
		@include box-shadow(none);
	}
	.ui-content {
		padding: 0 15px;
	}
	.wet-boew-menubar {
		a {
			padding: 0;
		}
	}
	.ui-li, a {
		&.ui-corner-top {
			@extend %gcwu-default-mobile-top-rounded-corners;
		}
		&.ui-corner-bottom {
			border-bottom-width: 1px;
			@extend %gcwu-default-mobile-bottom-rounded-corners;
		}
	}
}

.ui-header {
	.ui-title {
		min-width: 180px;
		margin-left: 35px;
		margin-right: 35px;
	}
}

#gcwu-gcnb {
	min-height: 41px;
	.ui-header {
		border: 1px solid #333;
	}
	li {
		@extend %gcwu-default-mobile-display-none;
	}
}

#gcwu-mnavbar {
	right: 3px;
	.ui-btn-inner {
		padding: 0.6em 14px;
	}
}

#gcwu-srch-submit {
	min-height: 22px;
	display: inline;
	margin: 0;
}

#gcwu-sig {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-wmms {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-gcnb {
	ul {
		@extend %gcwu-default-mobile-display-none;
	}
}

#gcwu-bc {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-psnb {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-srchbx {
	@extend %gcwu-default-mobile-display-none;
}

#wb-sec {
	@extend %gcwu-default-mobile-display-none;
}

#wb-foot {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-gcft {
	@extend %gcwu-default-mobile-display-none;
}

#gcwu-bnr {
	background: #225C96;
}

#gcwu-bnr-in {
	.ui-mini {
		.ui-btn-inner {
			font-size: 1em;
		}
	}
}

#gcwu-bc-in {
	background: #DFDFDD;
	@include background-image(linear-gradient(#F0EFEF, #DFDFDD));
	@extend %gcwu-default-mobile-no-rounded-corners;
	text-shadow: 0 1px 1px #fff;
	border-bottom: 1px solid #ccc;
	@include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
	ol {
		margin: 0;
		font-size: 90%;
	}
	li {
		margin: 0;
		padding: 5px 12px 5px 5px;
		@extend %gcwu-default-mobile-no-rounded-corners;
		&:last-child {
			padding-left: 5px;
		}
	}
	a {
		@extend %gcwu-default-mobile-no-rounded-corners;
	}
}

#wb-core {
	clear: both;
}

%period-after-pseudo {
	&:after {
		content: ".";
		@extend %gcwu-default-mobile-display-block;
		height: 0;
		clear: both;
		visibility: hidden;
	}
}

%gcwu-default-mobile-display-none {
	display: none;
}

%gcwu-default-mobile-display-block {
	display: block;
}

%white-space-normal {
	white-space: normal;
}

%position-absolute {
	position: absolute;
}

.ui-title {
	img {
		@extend %position-absolute;
		left: 3px;
		top: 8px;
	}
}

.ui-content {
	.ui-listview {
		margin: 0 -15px;
	}
}

%gcwu-default-mobile-font-1em-margin-0 {
	font-size: 1em;
	margin: 0;
}

%gcwu-default-mobile-font-125em {
	font-size: 1.25em;
}

h3 {
	&.ui-collapsible-heading {
		@extend %gcwu-default-mobile-font-1em-margin-0;
	}
}

.ui-li-static {
	@extend %gcwu-default-mobile-font-1em-margin-0;
	@extend %gcwu-default-mobile-font-125em;
}
/* ... */

